--- a/Vistas/DetallesCursoPagina.xaml
+++ b/Vistas/DetallesCursoPagina.xaml
@@ -24,7 +24,7 @@
         </Style>
 
         <Style x:Key="estiloBtnBackground" TargetType="Button">
-            <Setter Property="Background" Value="#000000"/>
+            <Setter Property="Background" Value="#479E85"/>
             <Setter Property="Foreground" Value="#ffffff"/>
             <Setter Property="FontSize" Value="18"/>
             <Setter Property="FontFamily" Value="{StaticResource NunitoFont}"/>
@@ -57,7 +57,7 @@
             <Setter Property="VerticalAlignment" Value="Top"/>
             <Setter Property="FontFamily" Value="{StaticResource NunitoFont}"/>
             <Setter Property="FontSize" Value="16"/>
-            <Setter Property="Background" Value="#ffffff"/>
+            <Setter Property="Background" Value="#D9E1E4"/>
             <Setter Property="Foreground" Value="#000000"/>
             <Setter Property="FontWeight" Value="Regular"/>
             <Setter Property="TextWrapping" Value="Wrap"/>
@@ -68,7 +68,7 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type TextBox}">
-                        <Border BorderBrush="#000000" CornerRadius="20" BorderThickness="3" Background="{TemplateBinding Background}">
+                        <Border BorderBrush="#5D737E" CornerRadius="20" BorderThickness="3" Background="{TemplateBinding Background}">
                             <ScrollViewer Margin="15 10" x:Name="PART_ContentHost"/>
                         </Border>
                     </ControlTemplate>
@@ -90,7 +90,7 @@
                                 </Grid.ColumnDefinitions>
                                 <TextBlock Style="{StaticResource estiloTxtBlockInfo}" Text="{Binding NumeroClase}"/>
                                 <TextBlock Grid.Column="1" Style="{StaticResource estiloTxtBlockInfo}" TextWrapping="Wrap" Width="1050" Text="{Binding TituloClase}"/>
-                                <Button x:Name="btnVerClase" Grid.Column="2" Style="{StaticResource estiloBtnBackground}" FontSize="15" Width="100" Click="ClicVerClase" Visibility="{Binding Visibilidad}">Ver más</Button>
+                                <Button x:Name="btnVerClase" Grid.Column="2" Style="{StaticResource estiloBtnBackground}" FontSize="15" Width="100" Click="ClicVerClase" Visibility="{Binding Visibilidad}" DataContext="{Binding}">Ver más</Button>
 
                             </Grid>
                         </Border>
@@ -105,7 +105,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <StackPanel Background="#000000" Orientation="Horizontal">
+        <StackPanel Background="#0A122A" Orientation="Horizontal">
             <Button Style="{StaticResource estiloBtnRegresar}" Name="btnRegresar" Click="ClicRegresar"></Button>
             <Border Background="#ffffff" CornerRadius="20" Width="200" Margin="15">
                 <TextBlock FontFamily="{StaticResource NunitoItalicFont}" FontSize="32" FontWeight="Medium" VerticalAlignment="Center" HorizontalAlignment="Center">Curso</TextBlock>
@@ -127,7 +127,7 @@
                     <ColumnDefinition Width="1.5*"/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <Border Background="#000000" CornerRadius="20" Margin="0 15 0 25" Height="120">
+                <Border Background="#0A122A" CornerRadius="20" Margin="0 15 0 25" Height="120">
                     <TextBlock x:Name="txtBlockTitulo" FontFamily="{StaticResource NunitoFont}" Foreground="#ffffff" FontSize="24" TextWrapping="Wrap" Margin="20 15"/> 
                 </Border>
                 <Grid Grid.Column="1">
@@ -146,7 +146,7 @@
                     <Image x:Name="mgMiniatura"></Image>
                 </Border>
 
-                <Border Grid.Row="3" Grid.Column="1" Background="Black" CornerRadius="30" Width="350" Margin="0 10">
+                <Border Grid.Row="3" Grid.Column="1" Background="#0A122A" CornerRadius="30" Width="350" Margin="0 10">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition/>
@@ -164,7 +164,7 @@
                         <ColumnDefinition Width="auto"/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <Border Background="#000000" CornerRadius="20" Height="45" Width="200" Margin="0 0 10 0" VerticalAlignment="Top">
+                    <Border Background="#0A122A" CornerRadius="20" Height="45" Width="200" Margin="0 0 10 0" VerticalAlignment="Top">
                         <TextBlock Style="{StaticResource estiloTxtBoxCampos}">Profesor</TextBlock>
                     </Border>
                     <TextBox Name="txtBoxTProfesor" Grid.Column="1" Style="{StaticResource estiloTxtBoxInfo}" Height="80"/> 
@@ -175,7 +175,7 @@
                         <ColumnDefinition Width="auto"/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <Border Background="#000000" CornerRadius="20" Height="45" Width="200" Margin="0 0 10 0" VerticalAlignment="Top">
+                    <Border Background="#0A122A" CornerRadius="20" Height="45" Width="200" Margin="0 0 10 0" VerticalAlignment="Top">
                         <TextBlock Style="{StaticResource estiloTxtBoxCampos}">Objetivos</TextBlock>
                     </Border>
                     <TextBox  Name="txtBoxObjetivos" Grid.Column="1" Style="{StaticResource estiloTxtBoxInfo}" Height="220"></TextBox>
@@ -186,7 +186,7 @@
                         <ColumnDefinition Width="auto"/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <Border Background="#000000" CornerRadius="20" Height="45" Width="200" Margin="0 0 10 0" VerticalAlignment="Top">
+                    <Border Background="#0A122A" CornerRadius="20" Height="45" Width="200" Margin="0 0 10 0" VerticalAlignment="Top">
                         <TextBlock Style="{StaticResource estiloTxtBoxCampos}">Etiquetas</TextBlock>
                     </Border>
                     <TextBox Name="txtBoxEtiquetas"  Grid.Column="1" Style="{StaticResource estiloTxtBoxInfo}" Height="50"></TextBox>
@@ -197,7 +197,7 @@
                         <ColumnDefinition Width="auto"/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <Border Background="#000000" CornerRadius="20" Height="45" Width="200" Margin="0 0 10 0" VerticalAlignment="Top">
+                    <Border Background="#0A122A" CornerRadius="20" Height="45" Width="200" Margin="0 0 10 0" VerticalAlignment="Top">
                         <TextBlock Style="{StaticResource estiloTxtBoxCampos}">Descripción</TextBlock>
                     </Border>
                     <TextBox  Name="txtBoxDescripcion" Grid.Column="1" Style="{StaticResource estiloTxtBoxInfo}" Height="140"/> 
@@ -208,7 +208,7 @@
                         <ColumnDefinition Width="auto"/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <Border Background="#000000" CornerRadius="20" Height="45" Width="200" Margin="0 0 10 0" VerticalAlignment="Top">
+                    <Border Background="#0A122A" CornerRadius="20" Height="45" Width="200" Margin="0 0 10 0" VerticalAlignment="Top">
                         <TextBlock Style="{StaticResource estiloTxtBoxCampos}">Requisitos</TextBlock>
                     </Border>
                     <TextBox  Name="txtBoxRequisitos"  Grid.Column="1" Style="{StaticResource estiloTxtBoxInfo}" Height="90"></TextBox>
@@ -219,7 +219,7 @@
                         <RowDefinition/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
-                    <Border Background="#000000" CornerRadius="20 20 0 0">
+                    <Border Background="#0A122A" CornerRadius="20 20 0 0">
                         <TextBlock Margin="20 5" Foreground="#ffffff" FontFamily="{StaticResource NunitoItalicFont}" FontSize="32" FontWeight="Medium" VerticalAlignment="Center" HorizontalAlignment="Left">Clases</TextBlock>
                     </Border>
                     <ListBox x:Name="lstBoxClases" Grid.Row="1" Height="400" ItemContainerStyle="{StaticResource estiloLstBoxClase}" BorderBrush="#000000" BorderThickness="3" >
